# EPORTFOLIOv4

./: .gitignore  README.md  pyproject.toml
django_project/: settings.py  urls.py
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20221231_0356.py  0003_rename_experience_experiencecard.py  0004_auto_20221231_0434.py  0005_contact.py
main/templates/main/: career.html  contact.html  home.html  live-resume.html  projects.html
static/css/: main.css
templates/: 404.html  base.html  footer.html  navbar.html
