[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Josh Campbell <joshecamp04@gmail.com>"]
description = ""
name = "eportv4-in-django"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
Pillow = "^9.3.0"
image = "^1.5.33"
sqlparse = "^0.4.3"
whitenoise = "^6.2.0"
django-ckeditor = "^6.5.1"
djangorestframework = "^3.14.0"
django-js-asset = "^2.0.0"
[tool.poetry.dev-dependencies]
